src/objects/Truckers_Commisions__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Truckers account that has the commissions</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The account must be a member.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Truckers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Truckers Commissions</relationshipLabel>
        <relationshipName>Truckers_Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>Calculates whether the Truckers commission is active</description>
        <formula>IF( Start_Date__c &lt; Date(Year(Today()), Month(Today()),1) &amp;&amp; End_Date__c &gt;= IF(Month(Today()) = 1, Date(Year(Today()) - 1, 12, 1), Date(Year(Today()), Month(Today()) -1, 1)), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this commission active?</inlineHelpText>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Category__c</fullName>
        <description>The category of the Truckers commission</description>
        <label>Commission Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fuel</fullName>
                    <default>true</default>
                    <label>Fuel</label>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Level__c</fullName>
        <description>What level of Truckers commission is being received?</description>
        <inlineHelpText>What level of Truckers commission is being received?</inlineHelpText>
        <label>Commission Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Fuel</fullName>
                    <color>#57F17C</color>
                    <default>true</default>
                    <label>New Fuel</label>
                </value>
                <value>
                    <fullName>Fuel Growth</fullName>
                    <color>#E27001</color>
                    <label>Fuel Growth</label>
                </value>
                <value>
                    <fullName>Mktg Fee</fullName>
                    <color>#FF0000</color>
                    <label>Mktg Fee</label>
                </value>
                <value>
                    <fullName>TA Fuel</fullName>
                    <color>#000099</color>
                    <label>TA Fuel</label>
                </value>
                <value>
                    <fullName>New Gold</fullName>
                </value>
                <value>
                    <fullName>Existing Gold</fullName>
                </value>
                <value>
                    <fullName>Existing50 Gold</fullName>
                </value>
                <value>
                    <fullName>Gold Growth</fullName>
                </value>
                <value>
                    <fullName>Fuel Card Y1</fullName>
                </value>
                <value>
                    <fullName>Fuel Card Y2</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>FLIP</fullName>
                </value>
                <value>
                    <fullName>FLIP Retention</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>FTS</fullName>
                    <color>#999999</color>
                    <label>FTS</label>
                </value>
                <value>
                    <fullName>7%</fullName>
                    <color>#57F17C</color>
                    <label>7%</label>
                </value>
                <value>
                    <fullName>5%</fullName>
                    <color>#57F17C</color>
                    <label>5%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Payable__c</fullName>
        <description>Who receives the Truckers commission?</description>
        <label>Commission Payable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Aurich</fullName>
                </value>
                <value>
                    <fullName>Dawna Cole</fullName>
                </value>
                <value>
                    <fullName>Ian Wilkinson</fullName>
                </value>
                <value>
                    <fullName>Jennifer Nelson</fullName>
                </value>
                <value>
                    <fullName>Rebecca Lester</fullName>
                </value>
                <value>
                    <fullName>Tyler Douglass</fullName>
                </value>
                <value>
                    <fullName>Dan Jenkins</fullName>
                </value>
                <value>
                    <fullName>Denise Lockwood</fullName>
                </value>
                <value>
                    <fullName>Jessica Rivera</fullName>
                </value>
                <value>
                    <fullName>Ross Murray</fullName>
                </value>
                <value>
                    <fullName>Shawn Galliett</fullName>
                </value>
                <value>
                    <fullName>Brian Loveland</fullName>
                </value>
                <value>
                    <fullName>Johnathan Cosman</fullName>
                </value>
                <value>
                    <fullName>Ryan Knowles</fullName>
                </value>
                <value>
                    <fullName>Ashley Darling</fullName>
                </value>
                <value>
                    <fullName>Adam Weber</fullName>
                </value>
                <value>
                    <fullName>Kellie Ciprian</fullName>
                </value>
                <value>
                    <fullName>Ryan Nichols</fullName>
                </value>
                <value>
                    <fullName>Dean Nunnelly</fullName>
                </value>
                <value>
                    <fullName>Christine Jennings</fullName>
                </value>
                <value>
                    <fullName>Katie Dean</fullName>
                </value>
                <value>
                    <fullName>Jared Mathis</fullName>
                </value>
                <value>
                    <fullName>Cameron Smith</fullName>
                </value>
                <value>
                    <fullName>Katie Schwerdtfeger</fullName>
                </value>
                <value>
                    <fullName>Taylor Jones</fullName>
                </value>
                <value>
                    <fullName>Nathan Horn</fullName>
                </value>
                <value>
                    <fullName>Tim Engles</fullName>
                </value>
                <value>
                    <fullName>Kyle Dodson</fullName>
                </value>
                <value>
                    <fullName>Zach Johnson</fullName>
                </value>
                <value>
                    <fullName>Melanie Sleigh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <description>The type of Truckers commission</description>
        <label>Commission Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fuel Referral</fullName>
                    <default>true</default>
                    <label>Fuel Referral</label>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>EFS Gold Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date the Truckers commission ended</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date the Truckers commission ended</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date the Truckers commission started</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date the Truckers commission started</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Threshold_Qty__c</fullName>
        <description>After a &quot;new&quot; Gold customer hits 12 months, we evaluate avg # tires sold in past 12 months to establish stake. commission paid as existing up to stake amount, New commission paid above stake.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Threshold Qty</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Commission_Payable__c</columns>
        <columns>Account__c</columns>
        <columns>Commission_Category__c</columns>
        <columns>Commission_Level__c</columns>
        <columns>Commission_Type__c</columns>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>